[package]
name = "proxyengine"
version = "0.4.2"
authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]

[lib]
name = "tcp_proxy"
path = "src/lib.rs"

[[bin]]
name = "proxy_engine"
path = "src/bin.rs"


[dependencies]
e2d2 = { version = "=0.3.6", path = "../NetBricks/framework", features = ["performance"] }
netfcts={ version="0.1.2", path = "../netfcts" }
rand = "0.3"
fnv = "*"
log = "0.4"
env_logger = "0.5"
nix = "0.10.0"
ctrlc = { version = "~3", features = ["termination"] }
time = ">=0.1.0"
ipnet = ">=1.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
eui48 = { version= "0.3", features=["serde"] }
error-chain = ">=0.12"
uuid = { version = ">=0.7", features = ["v4", "serde"] }
separator =  ">= 0.3"
#serde_json = "*"
bincode = "*"

[features]

