[package]
name = "proxyengine"
version = "0.4.8"
authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]

[lib]
name = "tcp_proxy"
path = "src/lib.rs"

[[bin]]
name = "proxy_engine"
path = "src/bin.rs"


[dependencies]
e2d2 = { version = "=1.0.3", path = "../NetBricks/framework", features = ["performance"] }
netfcts={ version="0.2.0", path = "../netfcts" }
fnv = "*"
log = "0.4"
env_logger = "0.5"
nix = "0.10.0"
ctrlc = { version = "~3", features = ["termination"] }
time = ">=0.1.0"
ipnet = ">=1.0"
toml = "~0.4"
serde = "1.0"
serde_derive = "1.0"
eui48 = { version= ">=0.4", features=["serde"] }
uuid = { version = ">=0.7", features = ["v4", "serde"] }
separator =  ">= 0.3"
#serde_json = "*"
bincode = "*"

[features]
profiling =[]
